backend/src/main/java/com/example/tutorApp/errors/UserNotFoundException.java
package com.example.tutorApp.errors;

public class UserNotFoundException extends RuntimeException {
    public UserNotFoundException() {
        super("User not found in system");
    }
}
